--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,20 +69,44 @@ h1 {
   display: flex;
   gap: 1em;
 }
-.option-wrapper {
-  padding: 0.3em 0.5em;
+.option-wrapper,
+#flight-options-search {
+  display: flex;
+  gap: 0.5em;
+  padding: 0.3em 0.9em;
   border-radius: 0.5em;
   border: 2px solid rgba(255, 255, 255, 0.8);
   background: rgba(255, 255, 255, 0.6);
 }
 #header .option-wrapper {
-  display: inline;
-  border: 2px solid rgba(255, 255, 255, 0.7);
+  display: flex;
+  padding: 0.3em 0.7em;
+  border: 2px solid rgba(255, 255, 255, 0.6);
   background: rgba(245, 221, 212, 0.8);
   text-align: right;
 }
-.option-dropdown {
-  max-width: 15em;
+.option-dropdown,
+.option-calendar {
+  height: 1.6em;
+  border-radius: 0;
+  border-bottom: 2px solid #fff;
+}
+#flight-options-from {
+  min-width: 16em;
+}
+#flight-options-start-date {
+  max-width: 6em;
+  display: inline-block;
+  text-align: left;
+}
+#flight-options-search {
+  cursor: pointer;
+  /* background: rgba(255, 255, 255, 0.8); */
+  font-weight: 600;
+}
+#option-label-calendar {
+  padding: 0 3px;
+  border: 2px solid rgb(255, 255, 255, 0.8);
 }
 
 /* Footer */
