--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,10 +20,16 @@ option {
   font-weight: inherit;
 }
 
-input:focus,
-button:focus,
-select:focus {
-  outline: none;
+*,
+*:focus,
+*:focus-visible,
+*:focus-within,
+*:target,
+*:active,
+*:hover,
+*:visited {
+  outline: none !important;
+  box-shadow: none !important;
 }
 
 /* Default settings */
@@ -32,13 +38,4 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
   background-color: #f7eadf;
-}
-
-label {
-  padding: 0 10px;
-}
-
-select {
-  border-bottom: 2px solid #fff;
-  padding-left: 10px;
 }
