--- a/client/src/components/reactSelect.css
+++ b/client/src/components/reactSelect.css
@@ -1,34 +1,34 @@
 /* Entire control */
 
 .option-dropdown__control {
-  border: none;
-  min-height: 1.5rem;
-  background: none;
+  border: none !important;
+  min-height: 1.5rem !important;
+  background: none !important;
 }
 .option-dropdown__control * {
-  padding: 0;
-  margin: 0;
-  min-height: 1.5rem;
-  background: none;
+  padding: 0 !important;
+  margin: 0 !important;
+  min-height: 1.5rem !important;
+  background: none !important;
 }
 
 /* Align arrow and text */
 
 .option-dropdown__value-container {
-  margin-top: -0.2em;
+  margin-top: -0.2em !important;
 }
 .option-dropdown__indicators {
-  position: relative;
-  margin-top: 0.2em;
+  position: relative !important;
+  margin-top: 0.2em !important;
 }
 
 /* Options */
 
 .option-dropdown__menu {
-  min-width: 7em;
-  font-size: 0.9rem;
+  min-width: 7em !important;
+  font-size: 0.9rem !important;
 }
 .option-dropdown__menu-portal {
-  border-radius: 0.5em;
-  border: 2px solid #fff;
+  border-radius: 0.5em !important;
+  border: 2px solid #fff !important;
 }
