--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,3 +39,20 @@ body {
   font-weight: 500;
   background-color: #f7eadf;
 }
+
+li {
+  list-style-type: none;
+}
+
+::-webkit-scrollbar {
+  width: auto;
+}
+::-webkit-scrollbar-track {
+  background: rgba(238, 211, 204, 0.5);
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.5);
+}
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.8);
+}
