fix(client): UI fixes
fix search in airports dropdown; fix return flights search; implement loading screen

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -127,6 +127,7 @@ h1 {
 .cheap-flight img {
   height: 1.3rem;
   margin: 0.1rem;
+  padding-top: 0.2em;
 }
 .cheap-flight-more-info {
   display: flex;
@@ -191,6 +192,38 @@ h1 {
 #option-label-calendar {
   padding: 0 3px;
   border: 2px solid rgb(255, 255, 255, 0.8);
+}
+
+/* Loading */
+
+.loading-container {
+  width: 100%;
+  height: 100%;
+  flex: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loading {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  font-family: Satisfy;
+  font-size: 2rem;
+  animation: pulse 1s infinite;
+  opacity: 0;
+}
+@keyframes pulse {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 /* Footer */
