--- a/client/src/App.css
+++ b/client/src/App.css
@@ -197,8 +197,9 @@ h1 {
   border: 2px solid rgb(255, 255, 255, 0.8);
 }
 
-/* Loading */
+/* Loading and welcome */
 
+.welcome-container,
 .loading-container {
   width: 100%;
   height: 100%;
@@ -206,6 +207,25 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.welcome-container > * {
+  padding: 2em 4em;
+  background: rgba(255, 255, 255, 0.3);
+  border: 20px solid rgba(255, 255, 255, 0.3);
+}
+.welcome-container * {
+  line-height: 1.7rem;
+}
+.welcome-container h2 {
+  font-family: Satisfy;
+  font-size: 2rem;
+  padding: 0 0 0.5em;
+  margin: 0 0 0.5em;
+  border-bottom: 2px solid #35312e;
+}
+.welcome-container li:before {
+  content: '✔';
+  padding: 0 0.8em;
 }
 .loading {
   top: 0;
