docs(client-App): add module commentary
do module code review and clean-up; add module commentary

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,7 +32,7 @@ option {
   box-shadow: none !important;
 }
 
-/* Default settings */
+/* Global settings */
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
