docs(client-components): add module commentary
do module code review and clean-up; add module commentary

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -99,7 +99,7 @@ h1 {
   gap: var(--column-gap);
 }
 .flights-day-header,
-.flights-day-column {
+.flights-day-list {
   min-width: calc(25% - var(--column-gap));
   max-width: calc(25% - var(--column-gap));
 }
