feat: get user current city

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -295,3 +295,8 @@ h1 {
   background: var(--color-beige-100);
   transition: 0s;
 }
+
+.geolocation {
+  background-color: white;
+  cursor: pointer;
+}
