--- a/client/src/App.css
+++ b/client/src/App.css
@@ -210,6 +210,45 @@ h1 {
   border: 2px solid var(--color-white-80);
 }
 
+/* Modal */
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.flight-data-modal {
+  background: rgb(255, 255, 255);
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 50vw;
+  width: 100%;
+  max-height: 60vh;
+  height: 100%;
+  text-align: center;
+}
+
+.buy-now-button {
+  background-color: #196ed7;
+  color: white;
+  padding: 12px 22px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.buy-now-button:hover {
+  background-color: #11519f;
+}
+
 /* Loading and welcome */
 
 .welcome-container,
