--- a/client/src/App.css
+++ b/client/src/App.css
@@ -234,6 +234,20 @@ h1 {
   max-height: 60vh;
   height: 100%;
   text-align: center;
+  position: fixed;
+}
+
+#close-modal {
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 1.5rem;
+}
+
+#flight-price {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .buy-now-button {
