style: mobile responsive

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -45,7 +45,7 @@ li {
   list-style-type: none;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: auto;
 }
 ::-webkit-scrollbar-track {
@@ -56,10 +56,10 @@ li {
 }
 ::-webkit-scrollbar-thumb:hover {
   background: rgba(255, 255, 255, 0.8);
-}
+} */
 
 @media (max-width: 720px) {
   html {
-    font-size: 80%;
+    font-size: 85%;
   }
 }
