--- a/client/src/App.css
+++ b/client/src/App.css
@@ -374,3 +374,34 @@ h1 {
   color: rgb(46, 46, 46);
   font-size: 1rem;
 }
+
+@media (max-width: 720px) {
+  html {
+    font-size: 80%;
+  }
+  .flights-day-list {
+    min-width: 23rem;
+    max-width: calc(30% - var(--column-gap));
+    overflow: scroll;
+    max-height: 20rem;
+    position: relative;
+  }
+  #header {
+    max-width: 90%;
+    margin: 0 auto;
+  }
+
+  .option-label {
+    font-size: 0.8rem;
+  }
+  .option-value {
+    font-size: 0.8rem;
+  }
+  label {
+    font-size: 1rem;
+  }
+
+  h1 {
+    font-size: 2.4rem;
+  }
+}
